ignore @infra/ packages in changesets

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -9,7 +9,7 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@apps/*", "@local/*"],
+  "ignore": ["@apps/*", "@infra/*", "@local/*"],
   "snapshot": {
     "useCalculatedVersion": true
   },
