--- a/libs/@blockprotocol/core/package.json
+++ b/libs/@blockprotocol/core/package.json
@@ -21,9 +21,29 @@
     "name": "HASH",
     "url": "https://hash.ai"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./react": {
+      "import": "./dist/esm/react.js",
+      "require": "./dist/cjs/react.js"
+    }
+  },
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/esm/index.d.ts"
+      ],
+      "react": [
+        "./dist/esm/react.d.ts"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
@@ -46,5 +66,8 @@
     "eslint": "8.33.0",
     "rimraf": "^3.0.2",
     "typescript": "4.9.4"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0"
   }
 }
