--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -24,6 +24,7 @@
     "@blockprotocol/core": "0.0.13",
     "@blockprotocol/graph": "0.0.19",
     "@blockprotocol/hook": "0.0.9",
+    "@blockprotocol/type-system": "^0.0.3",
     "@cloudflare/stream-react": "^1.8.0",
     "@emotion/cache": "^11.10.0",
     "@emotion/react": "^11.10.0",
@@ -69,7 +70,7 @@
     "mime-types": "^2.1.35",
     "mock-block-dock": "0.0.39",
     "mongodb": "^4.2.2",
-    "next": "13.0.7",
+    "next": "13.1.6",
     "next-connect": "^0.12.1",
     "next-http-proxy-middleware": "^1.2.5",
     "next-mdx-remote": "^4.0.3",
