--- a/libs/@blockprotocol/hook/package.json
+++ b/libs/@blockprotocol/hook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/hook",
-  "version": "0.0.9",
+  "version": "0.1.0-canary-20230206110959",
   "description": "Implementation of the Block Protocol Hook service specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "@blockprotocol/core": "0.0.13",
-    "@blockprotocol/graph": "0.0.19"
+    "@blockprotocol/graph": "0.1.0-canary-20230206110959"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
