--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -149,7 +149,7 @@
     "playwright-test-coverage": "^1.2.8",
     "rimraf": "^3.0.2",
     "suppress-experimental-warnings": "^1.1.2",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.4"
   }
 }
