--- a/libs/@blockprotocol/external-api/package.json
+++ b/libs/@blockprotocol/external-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/external-api",
-  "version": "0.0.9",
+  "version": "0.0.1-canary.3",
   "description": "Implementation of the Block Protocol external API service specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -48,6 +48,7 @@
     "build": "yarn clean && tsc --skipLibCheck",
     "clean": "rimraf ./dist/",
     "fix:eslint": "eslint --fix .",
+    "generate-service-json": "ts-node-esm --project tsconfig.json ./src/scripts/generate-service-json.ts",
     "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit"
   },
@@ -57,10 +58,13 @@
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
+    "@mapbox/search-js-core": "^1.0.0-beta.14",
+    "@types/geojson": "^7946.0.10",
     "@types/node": "^18.13.0",
     "eslint": "8.33.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "typescript-json-schema": "^0.55.0"
   }
 }
