--- a/libs/@local/package-chores/package.json
+++ b/libs/@local/package-chores/package.json
@@ -24,7 +24,7 @@
     "suppress-experimental-warnings": "^1.1.2",
     "tmp-promise": "3.0.3",
     "tree-kill": "1.2.2",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.4",
     "untildify": "4.0.0",
     "wait-on": "6.0.1"
