--- a/libs/@blockprotocol/core/package.json
+++ b/libs/@blockprotocol/core/package.json
@@ -24,11 +24,13 @@
   "exports": {
     ".": {
       "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
+      "require": "./dist/cjs/index.js",
+      "default": "./dist/esm/index.js"
     },
     "./react": {
       "import": "./dist/esm/react.js",
-      "require": "./dist/cjs/react.js"
+      "require": "./dist/cjs/react.js",
+      "default": "./dist/esm/react.js"
     }
   },
   "main": "./dist/cjs/index.js",
