--- a/libs/@blockprotocol/core/package.json
+++ b/libs/@blockprotocol/core/package.json
@@ -21,31 +21,9 @@
     "name": "HASH",
     "url": "https://hash.ai"
   },
-  "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "default": "./dist/esm/index.js"
-    },
-    "./react": {
-      "import": "./dist/esm/react.js",
-      "require": "./dist/cjs/react.js",
-      "default": "./dist/esm/react.js"
-    }
-  },
-  "main": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
-  "typesVersions": {
-    "*": {
-      ".": [
-        "./dist/esm/index.d.ts"
-      ],
-      "react": [
-        "./dist/esm/react.d.ts"
-      ]
-    }
-  },
   "files": [
     "dist"
   ],
