--- a/libs/mock-block-dock/package.json
+++ b/libs/mock-block-dock/package.json
@@ -47,6 +47,7 @@
     "@mui/material": "^5.10.4",
     "ajv": "^8.11.2",
     "echarts": "^5.3.3",
+    "mime": "^3.0.0",
     "mime-types": "^2.1.35",
     "react-json-view": "^1.21.3",
     "react-resizable": "^3.0.4",
@@ -66,6 +67,7 @@
     "@babel/runtime": "^7.20.6",
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
+    "@types/mime": "^3.0.1",
     "@types/mime-types": "^2.1.1",
     "@types/react-resizable": "^3.0.3",
     "babel-loader": "^9.1.0",
