--- a/libs/@blockprotocol/external-api/package.json
+++ b/libs/@blockprotocol/external-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/external-api",
-  "version": "0.0.1-canary.3",
+  "version": "0.0.1-canary.8",
   "description": "Implementation of the Block Protocol external API service specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -66,5 +66,8 @@
     "ts-node": "^10.9.1",
     "typescript": "4.9.4",
     "typescript-json-schema": "^0.55.0"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0"
   }
 }
