--- a/libs/@blockprotocol/service/package.json
+++ b/libs/@blockprotocol/service/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@blockprotocol/external-api",
+  "name": "@blockprotocol/service",
   "version": "0.0.1-canary.12",
-  "description": "Implementation of the Block Protocol external API service specification for blocks and embedding applications",
+  "description": "Implementation of the Block Protocol service module specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
     "blocks",
-    "external-api"
+    "service"
   ],
   "homepage": "https://blockprotocol.org",
   "bugs": {
@@ -14,7 +14,7 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:blockprotocol/blockprotocol.git",
-    "directory": "libs/@blockprotocol/external-api"
+    "directory": "libs/@blockprotocol/service"
   },
   "license": "MIT",
   "author": {
@@ -25,7 +25,7 @@
   "exports": {
     ".": "./dist/index.js",
     "./react": "./dist/react.js",
-    "./external-api-service-json": "./dist/external-api-service-json.js"
+    "./service-module-json": "./dist/service-module-json.js"
   },
   "types": "./dist/index.d.ts",
   "typesVersions": {
@@ -36,8 +36,8 @@
       "react": [
         "./dist/react.d.ts"
       ],
-      "external-api-service-json": [
-        "./dist/external-api-service-json.d.ts"
+      "service-module-json": [
+        "./dist/service-module-json.d.ts"
       ]
     }
   },
