--- a/libs/mock-block-dock/package.json
+++ b/libs/mock-block-dock/package.json
@@ -44,7 +44,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@lit-labs/react": "^1.0.4",
-    "@mui/material": "^5.10.4",
+    "@mui/material": "5.11.8",
     "ajv": "^8.11.2",
     "echarts": "^5.3.3",
     "mime": "^3.0.0",
