--- a/libs/wordpress-plugin/package.json
+++ b/libs/wordpress-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/wordpress",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": true,
   "description": "Repository for developing the Block Protocol WordPress plugin",
   "homepage": "https://blockprotocol.org/wordpress",
@@ -39,6 +39,7 @@
     "@types/lodash.debounce": "4.0.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/sanitize-html": "2.8.1",
     "@types/uuid": "8.3.4",
     "@types/wordpress__block-editor": "7.0.0",
     "@types/wordpress__blocks": "11.0.7",
@@ -47,11 +48,11 @@
     "@wordpress/blocks": "11.20.0",
     "@wordpress/components": "23.5.0",
     "@wordpress/data": "8.5.0",
-    "@wordpress/escape-html": "2.28.0",
     "@wordpress/scripts": "25.5.0",
     "buffer": "6.0.3",
     "lodash.debounce": "4.0.8",
     "patch-package": "6.5.1",
+    "sanitize-html": "2.10.0",
     "ts-loader": "9.4.1",
     "typescript": "4.8.4",
     "uuid": "9.0.0",
