--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -144,7 +144,8 @@
     "ajv-formats": "^2.1.1",
     "json-schema-to-typescript": "^11.0.2",
     "lit": "^2.4.1",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
@@ -154,8 +155,7 @@
     "@rollup/plugin-typescript": "9.0.2",
     "eslint": "8.33.0",
     "rimraf": "^3.0.2",
-    "rollup": "3.5.1",
-    "typescript": "4.9.4"
+    "rollup": "3.5.1"
   },
   "peerDependencies": {
     "react": "^18.0.0"
