--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -34,14 +34,9 @@
       "import": "./dist/es/main-temporal.js"
     },
     "./codegen": {
-      "types": "./dist/cjs/non-temporal/codegen.d.ts",
-      "require": "./dist/cjs/codegen-non-temporal.cjs",
-      "import": "./dist/es/codegen-non-temporal.js"
-    },
-    "./temporal/codegen": {
-      "types": "./dist/cjs/temporal/codegen.d.ts",
-      "require": "./dist/cjs/codegen-temporal.cjs",
-      "import": "./dist/es/codegen-temporal.js"
+      "types": "./dist/cjs/codegen.d.ts",
+      "require": "./dist/cjs/codegen.cjs",
+      "import": "./dist/es/codegen.js"
     },
     "./custom-element": {
       "types": "./dist/cjs/non-temporal/custom-element.d.ts",
@@ -95,10 +90,7 @@
         "./dist/cjs/temporal/main.d.ts"
       ],
       "codegen": [
-        "./dist/cjs/non-temporal/codegen.d.ts"
-      ],
-      "temporal/codegen": [
-        "./dist/cjs/temporal/codegen.d.ts"
+        "./dist/cjs/codegen.d.ts"
       ],
       "custom-element": [
         "./dist/cjs/non-temporal/custom-element.d.ts"
