--- a/libs/block-template-custom-element/package.json
+++ b/libs/block-template-custom-element/package.json
@@ -19,13 +19,13 @@
   },
   "scripts": {
     "build": "block-scripts build",
+    "codegen": "rimraf ./src/types && block-scripts codegen && yarn format && yarn fix:eslint",
     "dev": "block-scripts dev",
     "fix:eslint": "eslint --fix .",
     "format": "prettier --write --ignore-unknown .",
     "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit",
     "prepublishOnly": "PACKAGE_DIR=$(pwd) yarn workspace @local/package-chores exe scripts/cleanup-before-publishing.ts",
-    "schema": "block-scripts codegen",
     "serve": "block-scripts serve"
   },
   "prettier": {
@@ -44,7 +44,8 @@
     "mock-block-dock": "0.1.1",
     "prettier": "2.8.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rimraf": "^3.0.2"
   },
   "block-scripts": {
     "port": 63212
@@ -57,13 +58,23 @@
     "displayName": "Template",
     "examples": [
       {
-        "name": "World"
+        "https://blockprotocol.org/@blockprotocol/types/property-type/name/": "World"
       }
     ],
     "icon": "public/omega.svg",
     "image": "public/block-preview.png",
     "name": "block-template-custom-element",
     "protocol": "0.3",
-    "schema": "https://blockprotocol.org/@blockprotocol/types/entity-type/thing/v/2"
+    "codegen": {
+      "targetRoot": "src/types",
+      "targets": {
+        "thing.ts": [
+          {
+            "versionedUrl": "https://blockprotocol.org/@blockprotocol/types/entity-type/thing/v/2",
+            "blockEntity": true
+          }
+        ]
+      }
+    }
   }
 }
