--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -62,6 +62,7 @@
     "execa": "^6.1.0",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "framer-motion": "10.2.4",
     "fs-extra": "^10.1.0",
     "globby": "^13.1.2",
     "gray-matter": "^4.0.3",
