stop building broken commonjs build

--- a/libs/mock-block-dock/tsconfig.json
+++ b/libs/mock-block-dock/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@local/tsconfig/dom+jsx.json",
-  "include": ["assets.d.ts", "src", "dev"]
+  "include": ["src"],
+  "compilerOptions": {
+    "outDir": "dist"
+  }
 }
