--- a/libs/block-template-custom-element/package.json
+++ b/libs/block-template-custom-element/package.json
@@ -66,7 +66,7 @@
     "name": "block-template-custom-element",
     "protocol": "0.3",
     "codegen": {
-      "targetRoot": "src/types",
+      "outputFolder": "src/types",
       "targets": {
         "thing.ts": [
           {
