--- a/libs/block-template-react/package.json
+++ b/libs/block-template-react/package.json
@@ -68,7 +68,7 @@
     "name": "block-template-react",
     "protocol": "0.3",
     "codegen": {
-      "targetRoot": "src/types",
+      "outputFolder": "src/types",
       "targets": {
         "thing.ts": [
           {
