fix key name in block-template-react package.json example

--- a/libs/block-template-react/package.json
+++ b/libs/block-template-react/package.json
@@ -59,7 +59,7 @@
     "displayName": "Template",
     "examples": [
       {
-        "name": "World"
+        "https://blockprotocol.org/@blockprotocol/types/property-type/name/": "World"
       }
     ],
     "icon": "public/omega.svg",
